@@ -8,11 +8,13 @@
         It requires some configuration of the build.properties.
     -->
 <project name="Eclipse Persistence Services" default="all" basedir=".">
-
     <!-- Allows a user to overide certain user specific properties. -->
     <property file="${user.home}/build.properties"/>
+    <property file="${user.home}/test.properties"/>
     <property name="eclipselink.extension.oracle.test" value="."/>
     <property file="${eclipselink.extension.oracle.test}/build.properties"/>
+    <property file="${eclipselink.extension.oracle.test}/${test.properties}"/>
+    <property file="${eclipselink.extension.oracle.test}/test.properties"/>
 
     <!-- This checks if the trunk was checked out, or just the Eclipse projects. -->
     <available file="${eclipselink.extension.oracle.test}/${eclipselink.jpa.trunk}" type="dir" property="is.trunk"/>
@@ -116,4 +118,116 @@
         </delete>
     </target>
 
+    <!-- Classpath used for running tests. -->
+    <path id="run.classpath">
+        <pathelement path="${eclipselink.extension.oracle.test}/${classes.dir}"/>
+        <pathelement path="${eclipselink.extension.oracle.test}/${run.dir}"/>
+        <path refid="compile.path"/>
+        <pathelement path="${jdbc.driver.jar}"/>
+        <pathelement path="${tools.jar}"/>
+    </path>
+
+    <!-- Default test target, runs test.class from test.properties (default is OracleTestModel). -->
+    <target name="test">
+        <antcall target="run.test" inheritRefs="true">
+            <param name="TEST_CLASS" value="${test.class}"/>
+        </antcall>
+    </target>
+
+    <!-- Runs OracleTestModel. -->
+    <target name="test.oracle">
+        <echo message="Creating MY_GEOMETRY datatype for spatial tests: ${db.url}..."/>
+        <sql driver="${db.driver}"
+            url="${db.url}"
+            userid="${db.user}"
+            password="${db.pwd}"
+            onerror="continue"
+            >
+            <classpath>
+                <pathelement location="${jdbc.driver.jar}"/>
+            </classpath>
+CREATE OR REPLACE TYPE MY_GEOMETRY AS OBJECT (id NUMBER, geom MDSYS.SDO_GEOMETRY);
+        </sql>
+        <antcall target="run.test" inheritRefs="true">
+            <param name="TEST_CLASS" value="org.eclipse.persistence.testing.tests.OracleTestModel"/>
+        </antcall>
+    </target>
+
+    <!-- Prompt runner test target, runs test.class from test.properties (default is OracleTestModel). -->
+    <target name="test.prompt">
+        <antcall target="run.test.prompt" inheritRefs="true">
+            <param name="TEST_CLASS" value="${test.class}"/>
+        </antcall>
+    </target>
+
+    <!-- Launches the testing browser -->
+    <target name="test.browser">
+        <echo>Running test browser with ${test.properties}</echo>
+        <mkdir dir="${eclipselink.extension.oracle.test}/${run.dir}"/>
+        <mkdir dir="${eclipselink.extension.oracle.test}/${report.dir}"/>
+        <copy file="${eclipselink.core.test}/${resource.dir}/java.policy.allpermissions" todir="${eclipselink.extension.oracle.test}/${run.dir}" overwrite="true"/>
+        <java classname="org.eclipse.persistence.testing.framework.ui.TestingBrowserFrame"
+             fork="true"
+             maxmemory="512m"
+             failonerror="true"
+             dir="${eclipselink.extension.oracle.test}/${run.dir}">
+            <jvmarg value="-Declipselink.logging.level=${logging.level}"/>
+            <jvmarg value="-Dtest.properties=${test.properties.run}"/>
+            <jvmarg value="-Djava.security.manager"/>
+            <jvmarg value="-Djava.security.policy=./java.policy.allpermissions"/>
+            <classpath>
+                <path refid="run.classpath"/>
+            </classpath>
+        </java>
+    </target>
+
+    <!-- Generic target for running tests. -->
+    <target name="run.test">
+        <echo>Running test with ${test.properties} on ${db.url}</echo>
+        <mkdir dir="${eclipselink.extension.oracle.test}/${run.dir}"/>
+        <mkdir dir="${eclipselink.extension.oracle.test}/${report.dir}"/>
+        <junit printsummary="yes" failureproperty="junit.failed" fork="yes" showoutput="true" maxmemory="512m" dir="${eclipselink.core.test}/${run.dir}">
+            <jvmarg value="-Declipselink.logging.level=${logging.level}"/>
+            <jvmarg value="-Dtest.properties=${test.properties.run}"/>
+            <jvmarg value="-Djava.security.manager"/>
+            <jvmarg value="-Djava.security.policy=./java.policy.allpermissions"/>
+            <classpath>
+                <path refid="run.classpath"/>
+            </classpath>
+            <formatter type="xml"/>
+            <test name="${TEST_CLASS}" haltonfailure="no" outfile="${eclipselink.extension.oracle.test}/${report.dir}/test-results">
+            </test>
+        </junit>
+        <junitreport todir="${eclipselink.extension.oracle.test}/${report.dir}">
+            <fileset dir="${eclipselink.extension.oracle.test}/${report.dir}">
+                <include name="test-results.xml"/>
+            </fileset>
+            <report format="noframes" todir="${eclipselink.extension.oracle.test}/${report.dir}"/>
+        </junitreport>
+        <fail message="Some of the junit tests failed.  See the ${report.dir}/junit-noframes.html file for details." if="junit.failed"/>
+    </target>
+
+    <!-- Runs the test using the PromptTestRunner -->
+    <target name="run.test.prompt">
+        <echo>Running test with ${test.properties} on ${db.url}</echo>
+        <mkdir dir="${eclipselink.extension.oracle.test}/${run.dir}"/>
+        <mkdir dir="${eclipselink.extension.oracle.test}/${report.dir}"/>
+        <java classname="org.eclipse.persistence.testing.framework.PromptTestRunner"
+             fork="true"
+             maxmemory="512m"
+             failonerror="true"
+             dir="${eclipselink.extension.oracle.test}/${run.dir}">
+            <jvmarg value="-Declipselink.logging.level=${logging.level}"/>
+            <jvmarg value="-Dtest.properties=${test.properties.run}"/>
+            <jvmarg value="${test.security-manager}"/>
+            <jvmarg value="${test.security-manager.policy}"/>
+            <arg value="pfile=${test.properties.run}" />
+            <arg value="testmodel=${TEST_CLASS}" />
+            <arg value="regressionlog=../${report.dir}/test.log" />
+            <arg value="saveresults=true" />
+            <classpath>
+                <path refid="run.classpath"/>
+            </classpath>
+        </java>
+    </target>
 </project>
